- Fixed expanable area test - HFC-3668 - Fixed wrapping issue on checkboxes - HFC-3710

--- a/sass/controls/_checkboxes.scss
+++ b/sass/controls/_checkboxes.scss
@@ -2,7 +2,7 @@
 //================================================== //
 
 @mixin checkbox-animation {
-  @include animation(check 0.15s);
+  @include animation(check .15s);
 }
 
 @mixin checkbox-transform-rules {
@@ -36,15 +36,15 @@
 }
 
 @mixin checkbox-checked-after-style {
+  @include css3(transform, scaleX(-1) rotate(135deg));
   border-color: $checkbox-arrow-color $checkbox-arrow-color $checkbox-arrow-color transparent;
   border-style: solid;
   border-width: 2px 2px 0 0;
   content: '';
   height: 10px;
   left: 8px;
-  margin-top: 10px;
   position: absolute;
-  @include css3(transform, scaleX(-1) rotate(135deg));
+  top: 10px;
   width: 4px;
 }
 
@@ -114,7 +114,7 @@ span.checkbox > input:checked + label:after {
 input.checkbox:checked + input[type="hidden"] + label:after,
 span.checkbox > input:checked + label:after {
   left: 11px;
-  margin-top: 3px;
+  margin-top: -8px;
 }
 
 span.checkbox > input:checked + label:after {
